--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<tittle>my first github pages document</tittle>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<tittle></tittle>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<h1>Hey world</h1>
-<p>This is my page on Git Hub</p>
+	<h1>Oriana Lacau</h1>
+<p>Welcome to my core interaction page! </p>
 
 </body>
 </html>
