project one site
cross platform story telling css and html, link from home page to this pGe

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <p>Welcome to my core interaction page! </p>
 
 <a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a>
+<a href="p1.html">project one</a>
+
 
 
 </body>
