update to project one
videos now embeded

--- a/p1.html
+++ b/p1.html
@@ -14,21 +14,16 @@
 
 
 <body>
-			<img src="clubp1.gif">
-
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/VP2gewhuS5E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		<div class="wrapper">
-			<video src="club1.mov" autoplay controls>	
-			</video>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/k0srzyVQxBQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 					<p> Platform: Club Penguin</p>
 
 						<h4> The poem recited at a Club Penguin coffee shop. I️ chose this platform because the poem takes place at a coffee shop and I️ thought it would be interesting to be in a digital version of that environment and be communicating with other penguins around me. </h4>
 
 		<div class="wrapper">
-			<video src="mp.mov" autoplay controls>
-			</video>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/pwvPZKJgR0w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 					<h5>The poem read by the text-description feature on Tik Tok. The poem’s repetition of verses in combination with the theme of time portrays time as a looping measure. The nature of Tik Tok is similar, as videos on the app loop and continue to play until you exit. Both the poem and Tok Tok characterize time similarly.</h5>
 
@@ -36,8 +31,7 @@
 
 		
 		<div class="wrapper">
-			<video src="alarm.mov" autoplay controls>
-			</video>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/tJd86AV-PyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 					<h6> The poem told through alarm labels. One of the poem’s central themes is time. I️ decided to use this platform because it has a very literal connection something centered in the poem.</h6>
 
