--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a>
 <a href="p1.html"> project one </a>
-
-
+<a href="https://docs.google.com/document/d/1WUvf2kl2svx8SHxQLCQNQgzrYa_VsFmvBpHwhsdBPak/edit"> project two part one </a>
 
 </body>
 </html>
