--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
 	<h1>Oriana Lacau</h1>
 <p>Welcome to my core interaction page! </p>
 
-<a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a>
-<a href="p1.html"> project one </a>
-<a href="https://docs.google.com/document/d/1WUvf2kl2svx8SHxQLCQNQgzrYa_VsFmvBpHwhsdBPak/edit"> project two part one </a>
-<a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> workshop </a>
+
+<h2>Studio Projects</h2>
+<ul>
+<li><a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a></li>
+
+<li><a href="p1.html"> project one </a></li>
+<li><a href="https://docs.google.com/document/d/1WUvf2kl2svx8SHxQLCQNQgzrYa_VsFmvBpHwhsdBPak/edit"> project two part one </a></li>
+</ul>
+
+
+
+<h2> Studio Workshops</h2>
+<ul>
+<li><a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> workshop </a></li>
+</ul>
+
+<h2> Lab Projects</h2>
+
+<h2> Lab Workshops </h2>
+
 </body>
 </html>
