hit counter trial

--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
 
 <h2> Lab Workshops </h2>
 <li><a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a></li>
+
+
+
+<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="137f7681bce2de54cfa9e5c6399cff70|9|page|1|rgb(234, 80, 176);|rgb(9, 37, 78);|large|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+
+
 </body>
 </html>
