--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <ul>
 
 <li><a href="p1.html"> project one </a></li>
-<li><a href="https://docs.google.com/document/d/1WUvf2kl2svx8SHxQLCQNQgzrYa_VsFmvBpHwhsdBPak/edit"> project two part one </a></li>
+<li><a href="p2_3.html">project two process</a></li>
+
 </ul>
 
 
@@ -30,9 +31,6 @@
 <h2> Lab Workshops </h2>
 <li><a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a></li>
 
-
-
-<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="137f7681bce2de54cfa9e5c6399cff70|9|page|1|rgb(234, 80, 176);|rgb(9, 37, 78);|large|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
 
 
 </body>
