--- a/p2_3.html
+++ b/p2_3.html
@@ -22,6 +22,10 @@
 
 <li><a href="https://notability.com/n/0jWjcE~G4CmsQOyyaZT5au"> Mind map </a></li>
 <li><a href="https://xd.adobe.com/view/27b1b352-79fe-4303-928e-2b675800c02d-72e2/"> Web and Mobile view </a></li>
+
+<li><a href="https://xd.adobe.com/view/2a35c511-df3c-4688-ab54-7e4ccc68c3fa-7f66/"> Part 3 
+</a></li>
+
 </ul>
 
 
