--- a/p2_3.html
+++ b/p2_3.html
@@ -25,6 +25,8 @@
 
 <li><a href="https://xd.adobe.com/view/2a35c511-df3c-4688-ab54-7e4ccc68c3fa-7f66/"> Part 3 
 </a></li>
+<li><a href="p2draft_01.html"> Part 4 
+</a></li>
 
 </ul>
 
