--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul>
 
 <li><a href="p1.html"> project one </a></li>
-<li><a href="p2_3.html">project two process</a></li>
+<li><a href="p2/p2_3.html">project two process</a></li>
 
 </ul>
 
