--- a/p2 copy 2/p2draft_01copy2.html
+++ b/p2 copy 2/p2draft_01copy2.html
@@ -10,19 +10,20 @@
 
 
 <div class= "container">
-<p> <a href="pagecontent.html"> ! </a> </p>
-<p> <a href="pagecontent.html"> , </a> </p>
-<p> <a href="pagecontent.html"> ? </a> </p>
-<p> <a href="pagecontent.html"> . </a> </p>
-<p> <a href="pagecontent.html"> ' </a> </p>
+ <p> <a href="pagecontent1.html"> ! </a> </p>
+<p> <a href="pagecontent2.html"> , </a> </p>
+<p> <a href="pagecontent3.html"> ? </a> </p>
+<p> <a href="pagecontent4.html"> . </a> </p>
+<p> <a href="pagecontent5.html"> ' </a> </p>
 
 </div>
 
-
+<div class="tittle">
 <h3> on punctuation </h3>
+</div>
+
 <h5> by Gertrude Stein </h5>	
 <h5> designed by Oriana Lacau </h5>	
-
 
 
 
