--- a/p2/p2-copy-2/p2draft_01copy2.html
+++ b/p2/p2-copy-2/p2draft_01copy2.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="p2draft_01.css">
+	<link rel="stylesheet" type="text/css" href="p2draft_01copy2.css">
 </head>
 <body>
 
 
 <div class= "container">
- <p> <a href="pagecontent1.html"> ! </a> </p>
-<p> <a href="pagecontent2.html"> , </a> </p>
-<p> <a href="pagecontent3.html"> ? </a> </p>
-<p> <a href="pagecontent4.html"> . </a> </p>
-<p> <a href="pagecontent5.html"> ' </a> </p>
+ <p> <a href="pagecontent1copy2.html"> ! </a> </p>
+<p> <a href="pagecontent2copy2.html"> , </a> </p>
+<p> <a href="pagecontent3copy2.html"> ? </a> </p>
+<p> <a href="pagecontent4copy2.html"> . </a> </p>
+<p> <a href="pagecontent5copy2.html"> ' </a> </p>
 
 </div>
 
