--- a/p2/p2_3.html
+++ b/p2/p2_3.html
@@ -27,7 +27,7 @@
 </a></li>
 <li><a href="p2draft_01.html"> Part 5 
 <li><a href="p2copy/p2draft_01copy.html"> Part 5
-	<li><a href="./p2copy/p2draft_01copy.html"> Part 5
+	<li><a href="p2-copy-2/p2draft_01copy2.html"> Part 5
 </a></li>
 
 </ul>
