--- a/p2/p2-copy-2/pagecontent1copy2.html
+++ b/p2/p2-copy-2/pagecontent1copy2.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<tittle></tittle>
-	<link rel="stylesheet" type="text/css" href="pagecontent2.css">
+	<link rel="stylesheet" type="text/css" href="pagecontent1copy2.css">
 </head>
 <body>
 
