--- a/p2/p2_3.html
+++ b/p2/p2_3.html
@@ -29,6 +29,8 @@
 <li><a href="p2copy/p2draft_01copy.html"> Part 5
 	<li><a href="p2-copy-2/p2draft_01copy2.html"> Part 5
 </a></li>
+<li><a href="part6/draft1/p2draft_01copy2-6.html"> Part 6</a></li>
+
 
 </ul>
 
