--- a/p2/final/finaldraft/pagecontent4final.html
+++ b/p2/final/finaldraft/pagecontent4final.html
@@ -160,12 +160,8 @@
 </p>
 
 <div class="top">
- <a href="p2draft_01copy2-6.html"> home </a>
- <a href="Pagecontent1copy2-6.htmll"> ! </a> 
- <a href="Pagecontent2copy2-6.html"> , </a> 
- <a href="Pagecontent3copy2-6.html"> ? </a> 
- <a href="Pagecontent4copy2-6.html"> . </a> 
- <a href="Pagecontent5copy2-6.html"> ‘ </a> 
+ <a href="p2draft_01final.html"> home </a>
+
 </div>
 
 
