--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <h2> Studio Workshops</h2>
 <ul>
 <li><a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> workshop </a></li>
+<li><a href="hoverstats/mainhover.html"></a></li>
 </ul>
 
 <h2> Lab Projects</h2>
