--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
 
 
 <h2> Studio Workshops</h2>
-<ul>
-<li><a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> workshop </a></li>
-<li><a href="hoverstats/mainhover.html"></a></li>
-</ul>
+	<ul>
+		<li><a href="https://docs.google.com/document/d/11wCo-Kiba413yD7n4zgNGdfJzDAyTGprIFWR376X6Xs/edit"> Slack Avatar </a></li>
+		<li><a href="stint.html">Screen Time</a></li>
+		<li><a href="https://drive.google.com/drive/folders/1ezJlVbf5nwEvzXL4wdBdiWlVXqG8156W">Screenshot Portrait</a></li>
+		<li><a href="https://drive.google.com/drive/folders/1yA_wGADoGlyJCOJiAYzq3KkW1U0uw_UW">Handmade Code</a></li>
+		<li><a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> Interaction and Type Study </a></li>
+		<li><a href="hoverstats/mainhover.html">Hover States</a></li>
+		
+	
+
+	</ul>
 
 <h2> Lab Projects</h2>
-<li><a href="responsive.html"> responsive web page</a></li>
+		<li><a href="responsive.html"> responsive web page</a></li>
 
 <h2> Lab Workshops </h2>
-<li><a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a></li>
-<li><a href="class-cookbook/index.html">class cookbook</a></li>
+		<li><a href="remember-that-improvement/is-something-to/be-proud-of/comguide.html">community agreements</a></li>
+		<li><a href="class-cookbook/index.html">class cookbook</a></li>
 
 
 
