--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <li><a href="p1.html"> project one </a></li>
 <li><a href="p2/p2_3.html">project two process</a></li>
 <li><a href="p2/final/finaldraft/p2draft_01final.html">project two</a></li>
+<li><a href="p3p.html"> project three process </a></li>
+
 
 </ul>
 
