--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 
 </head>
 <body>
+
 	<h1>Oriana Lacau</h1>
-		<p>Welcome to my core interaction page! </p>
+		
+		<div class="butterfly2">
+			<IMG SRC=images/welcome.gif>
+			<IMg SRC=images/world.gif>
+		</div>
+
+		
+
+			<div class="butterfly">
+
+			<IMG SRC=images/pinkandblu.gif>
+			</div>
 
 		<h2>Studio Projects</h2>
 			<ul>
