--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		
 		<div class="butterfly2">
 			<IMG SRC=images/welcome.gif>
-			<IMg SRC=images/world.gif>
+			<IMG SRC=images/world.gif>
 		</div>
 
 		
