--- a/gitpages.html
+++ b/gitpages.html
@@ -5,31 +5,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<tittle></tittle>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="gitpages.css">
 
 </head>
 <body>
 
-	<h1>Oriana Lacau</h1>
-		
-		<div class="butterfly2">
-			<IMG SRC=images/welcome.gif>
-			<IMG SRC=images/world.gif>
-		</div>
+	<h1> Welcome to my homepage</h1>
 
-		
-
-			<div class="butterfly">
-
-			<IMG SRC=images/pinkandblu.gif>
-			</div>
-
-		<h2>Studio Projects</h2>
+		<h2>What I take Notes with:</h2>
 			<ul>
-				<li><a href="studio/studioprojects/crossplatform/p1.html"> project one </a></li>
-				<li><a href="studio/studioprojects/p2/p2_3.html">project two process</a></li>
-				<li><a href="studio/studioprojects/p2/final/finaldraft/p2draft_01final.html">project two</a></li>
-				<li><a href="studio/studioprojects/elasticcollection/p3p.html"> project three process </a></li>
+				<p> my phone </p>
+				<p> pen and paper </p>
+				<p> my planner </p>
 			</ul>
 
 		<h2> Studio Workshops</h2>
@@ -44,7 +31,7 @@
 			</ul>
 
 		<h2> Lab Projects</h2>
-				<li><a href="lab/lab-workshop/gitpages.html"> github home page</a></li>
+				<li><a href="lab/lab-workshop/responsive/responsive.html"> github home page</a></li>
 				<li><a href="lab/lab-workshop/remember-that-improvement/is-something-to/be-proud-of/comguide.html"> community agreements</a></li>
 				<li><a href="lab/lab-workshop/responsive/responsive.html"> collaborative digital zine</a></li>
 				<li><a href="lab/lab-workshop/responsive/responsive.html"> web tour</a></li>
