--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 				<li><a href="studio/studioprojects/p2/p2_3.html">project two process</a></li>
 				<li><a href="studio/studioprojects/p2/final/finaldraft/p2draft_01final.html">project two</a></li>
 				<li><a href="studio/studioprojects/elasticcollection/p3p.html"> project three process </a></li>
+				<li><a href="studio/studioprojects/ec-draft.html"> project4 </a></li>
+				<li><a href="studio/studioprojects/ec-draft2.html"> project4 </a></li>
+				<li><a href="studio/studioprojects/ec-draft3.html"> project4 </a></li>
 			</ul>
 
 		<h2> Studio Workshops</h2>
