--- a/studio/studioprojects/ec-draft3.html
+++ b/studio/studioprojects/ec-draft3.html
@@ -3,6 +3,7 @@
 <head>
 	
 	<meta charset="UTF-8">
+	<script src="display_random.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="ec-draft3.css">
 
@@ -14,11 +15,17 @@
 		<div class="cookie">
 		</div>
 
-		<IMG SRC=images/fortune.png>
+		<IMG SRC=././images/200.gif>
 
 
 		<h2>click to see your fortune click to see your fortune click to see your fortune </h2>
+		<h4>click to see your fortune click to see your fortune click to see your fortune </h3>
 		<h3>click to see your fortune click to see your fortune click to see your fortune </h3>
+
+		<div>
+		<button id="jsstyle" 
+		onclick="display_random_image();">fortune</button> 
+		</div>
 				
 				
 
