--- a/untitled folder/soymilkandberries.html
+++ b/untitled folder/soymilkandberries.html
@@ -3,9 +3,9 @@
 <head>
 	
 	<meta charset="UTF-8">
-	<script src="display_random.js"></script>
+	<script src="display_randomcopy.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="ec-draft3.css">
+	<link rel="stylesheet" type="text/css" href="ec-draft3copy.css">
 
 </head>
 <body>
@@ -15,15 +15,9 @@
 	<button id="jsstyle" class="play" 
 	onclick="display_random_image();">
 
-	<img src="fortcook.PNG" alt="cookie" class="center">
+	<img src="O.PNG" alt="cookie" class="center">
 	</button>
 
-	<div>
-		<audio id="audio" src="https://upload.wikimedia.org/wikipedia/commons/3/37/Zh-b%C3%A8ijing.ogg" preload="auto"  ></audio>
-		<button id="play">Play</button>
-
-	</div>
-		
 		
 	
 				
