--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				<li><a href="https://docs.google.com/document/d/1rLusOiXmm_oP2udWy7KMnios-DXs1HUS4WR0kR3EQlg/edit"> Interaction and Type Study </a></li>
 				<li><a href="studio/studioworkshops/hoverstats/mainhover.html">Hover States</a></li>
 				<li><a href="index.html">Flex Calandar</a></li>
+				<li><a href="studio/studioworkshops/text.html"> Text Work Shop</a></li>
 			</ul>
 
 		<h2> Lab Projects</h2>
