--- a/studio/typer-4/about.html
+++ b/studio/typer-4/about.html
@@ -11,15 +11,14 @@
 <body>
 	
 
-	<h1>spectators</h1>
-	<h3>type to start</h3>
-	<p> This website only functions on desktop</p>
-	<a href="about.html"> spectators </a>
+	<h1></h1>
+	<h2>Designed by Oriana Lacau</h2>
+	<h5>An experimental website where letters are asigned an illustration by me blah blah uuygfg</h5>
+  <h2></h2>
+	<a href="index.html"> spectators </a>
 
  
-<div id="container">
-  <span id="cursor">|</span>
-</div>
+
  
 </body>
 </html>
