--- a/studio/typer-4/about.html
+++ b/studio/typer-4/about.html
@@ -3,7 +3,7 @@
   <title>spectators</title>
   <script src="js/jquery-3.2.0.min.js"></script>
   <script src="js/init.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style2.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -13,9 +13,17 @@
 
 	<h1></h1>
 	<h2>Designed by Oriana Lacau</h2>
-	<h5>An experimental website where letters are asigned an illustration by me blah blah uuygfg</h5>
+	<h5>Spectator is a website that displays illustrations made by Oriana Lacau when you type. Each letter is assigned an illustration and your message will appear as spectators, who watch what you say. View the key  below.</h5>
   <h2></h2>
 	<a href="index.html"> spectators </a>
+
+<div class="key">
+  
+  <img src="key.png">
+
+</div>
+ 
+  
 
  
 
