--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 				<li><a href="studio/studioprojects/ec-draft.html"> project4 </a></li>
 				<li><a href="studio/studioprojects/ec-draft2.html"> project4 </a></li>
 				<li><a href="studio/studioprojects/ec-draft3.html"> project4 </a></li>
+				<li><a href="studio/typer-4/index.html"> Input Output </a></li>
+				
 			</ul>
 
 		<h2> Studio Workshops</h2>
