--- a/studio/studioprojects/fortabout.html
+++ b/studio/studioprojects/fortabout.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<meta charset="UTF-8">
-	<script src="display_random.js"></script>
+	<script src="display_random2.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="ec-draft3.css">
 
@@ -11,9 +11,9 @@
 <body>
 
 
-	<a id="about" href="ec-draft3.html">clear</a>
+	<a id="about" href="ec-draft3.html">home</a>
 
-	<a href="fortabout.html">fortunes</a>
+	
 		
 <button id="jsstyle" class="play" 
 	onclick="display_random_image();">
@@ -21,10 +21,6 @@
 <img src="fortcook.PNG" alt="cookie" class="center">
   </button>
 	
-<audio id="audio-player" name="audio-player"></audio>
-
-<a id="play-bt" href="#"></a> 
-<br><br>
 
 
 
