--- a/studio/studioprojects/ec-draft3.html
+++ b/studio/studioprojects/ec-draft3.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+	<title>fortunes</title>
 	
 	<meta charset="UTF-8">
 	<script src="display_random.js"></script>
