--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
 		<h2> Lab Projects</h2>
 				<li><a href="lab/lab-workshop/gitpages.html"> github home page</a></li>
 				<li><a href="lab/lab-workshop/remember-that-improvement/is-something-to/be-proud-of/comguide.html"> community agreements</a></li>
-				<li><a href="lab/lab-workshop/responsive/responsive.html"> collaborative digital zine</a></li>
-				<li><a href="lab/lab-workshop/responsive/responsive.html"> web tour</a></li>
+				<li><a href="https://core-interaction-spring-2021.rejuvenatethe.net/#home">collaborative digital zine</a></li>
+				<li><a href="lab/lab-projects/webtour/index.html">web tour 1</a></li>
+				<li><a href="lab/lab-projects/webtour2/index.html">web tour 2</a></li>
+				<li><a href="lab/lab-projects/webtour3/index.html">web tour 3</a></li>
+				<li><a href="index.html">tech reflection 3</a></li>
+				<li><a href="index.html">tech reflection 3</a></li>
+
 
 
 		<h2> Lab Workshops </h2>
