--- a/studio/studioprojects/p2/final/finaldraft/p2draft_01final.html
+++ b/studio/studioprojects/p2/final/finaldraft/p2draft_01final.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class= "tittle">
-		<h3> <a href="text-nostylefinal.html"> on punctuation </a> 
+		 <a href="text-nostylefinal.html"> on punctuation </a> 
 	</div>
 
 
