--- a/studio/studioprojects/elasticcollection/p3p.html
+++ b/studio/studioprojects/elasticcollection/p3p.html
@@ -10,6 +10,20 @@
 </head>
 <body>
 		<li><a href="https://docs.google.com/presentation/d/1Lok5kh5dDZHv2GyGt9l9piwrr7LKDO5RBNEGuE1uPcc/edit?pli=1#slide=id.gc449fc5e3b_1_35">part one</a></li>
+		<li><a href="https://docs.google.com/presentation/d/1Lok5kh5dDZHv2GyGt9l9piwrr7LKDO5RBNEGuE1uPcc/edit?pli=1#slide=id.gc449fc5e3b_1_35">part two</a></li>
+		<li><a href="https://docs.google.com/presentation/d/1Lok5kh5dDZHv2GyGt9l9piwrr7LKDO5RBNEGuE1uPcc/edit?pli=1#slide=id.gc449fc5e3b_1_35">part three</a></li>
+		<li><a href="https://drive.google.com/drive/u/1/folders/1VG_vCtdwM_9dZcskkj-whXYvPwoqWBu1">part four</a></li>
+		<li><a href="https://drive.google.com/drive/u/1/folders/1VG_vCtdwM_9dZcskkj-whXYvPwoqWBu1">part five</a></li>
+		
+
+		<li><a href="https://xd.adobe.com/view/a259646a-efcc-49a4-8ca1-f0186ffebeab-f70a/">sketch one</a></li>
+		<li><a href="https://xd.adobe.com/view/8e836b43-28ce-403b-9079-fa4f847bde3b-dbd0/">sketch two  </a></li>
+		<li><a href="https://www.figma.com/file/9leXrjXoYz1OSxDfxL5gTd/Untitled?node-id=0%3A1">sketch three</a></li>
+		<li><a href="studio/studioprojects/ec-draft.html">draft one</a></li>
+		<li><a href="studio/studioprojects/ec-draft2.html">draft two</a></li>
+		<li><a href="studio/studioprojects/ec-draft.html">draft three</a></li>
+		<li><a href="studio/studioprojects/ec-draft2.html">draft four</a></li>
+		<li><a href="studio/studioprojects/ec-draft3.html">draft five</a></li>
 
 </body>
 </html>
