--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<li><a href="lab/labprojects/webtour2/index.html">web tour 2</a></li>
 				<li><a href="lab/labprojects/webtour3/index.html">web tour 3</a></li>
 				<li><a href="index.html">tech reflection 3</a></li>
-				<li><a href="index.html">tech reflection 3</a></li>
+				<li><a href="airtable.html">airtable</a></li>
 
 
 
