--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<li><a href="lab/labprojects/webtour/index.html">web tour 1</a></li>
 				<li><a href="lab/labprojects/webtour2/index.html">web tour 2</a></li>
 				<li><a href="lab/labprojects/webtour3/index.html">web tour 3</a></li>
-				<li><a href="index.html">tech reflection 3</a></li>
+				<li><a href="studio/typer-4/js/init.js">tech reflection 3</a></li>
 				<li><a href="airtable.html">airtable</a></li>
 
 
